ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - host: ip172-18-0-30-c5jfe05ac5og00e4fgm0.direct.labs.play-with-k8s.com
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8080
